# tkp-conversation-to-artifact

./: .gitignore  LICENSE  PUBLICATION_READINESS.md  README.md  WINDOWS_VERIFICATION_GATE.md  pyproject.toml
.github/workflows/: windows-verification.yml
docs/: INPUT_OUTPUT_CONTRACT.md  LIMITATIONS.md  PRIVACY_AND_SECURITY.md  PROJECT_FOREMAN_RELATIONSHIP.md
evidence/: PUBLIC_TEST_RECEIPT.json
evidence/public_fixture_run/: Composition_Run_Receipt.json  Continuation_Brief.md  Project_Spine.md
fixtures/: sanitized_authority_intelligence.json  sanitized_normalized_conversation.json
scripts/: run_fixture.ps1
src/tkp_conversation_to_artifact/: __init__.py  cli.py  composer.py
tests/: test_composer.py
