[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tkp-conversation-to-artifact"
version = "0.1.0"
description = "Traceable project artifact composition from normalized AI conversation evidence."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Torch & Key Press"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tkp-compose-artifacts = "tkp_conversation_to_artifact.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
